# BPModule-StandardModules

./: CMakeLists.txt  CallPsi4.py  Doxyfile  README.md  StandardModules.py
Common/: BasisSetCommon.cpp  BasisSetCommon.hpp  CMakeLists.txt  EigenCommon.cpp  EigenCommon.hpp  ProgressBar.cpp  ProgressBar.hpp
Integrals/: Boys.cpp  Boys.hpp  CMakeLists.txt  Common.cpp  Common.hpp  CoreBuild.cpp  CoreBuild.hpp  Dipole.cpp  Dipole.hpp  EigenCacher.cpp  EigenCacher.hpp  KineticEnergy.cpp  KineticEnergy.hpp  NuclearDipole.cpp  NuclearDipole.hpp  NuclearRepulsion.cpp  NuclearRepulsion.hpp  OSDipole.hpp  OSKineticEnergy.cpp  OSKineticEnergy.hpp  OSOneElectronPotential.cpp  OSOneElectronPotential.hpp  OSOneElectronPotential_LUT.cpp  OSOneElectronPotential_LUT.hpp  OSOverlap.cpp  OSOverlap.hpp  OSOverlapTerms.hpp  OneElectronIntegralSum.cpp  OneElectronIntegralSum.hpp  OneElectronPotential.cpp  OneElectronPotential.hpp  OneElectronPotential_LUT.cpp  OneElectronProperty.cpp  OneElectronProperty.hpp  OneElectron_Eigen.cpp  OneElectron_Eigen.hpp  Overlap.cpp  Overlap.hpp  ReferenceERI.cpp  ReferenceERI.hpp  (+3 more)
Integrals/OneElectronIntegrals/: CMakeLists.txt  CoreBuild.cpp  CoreBuild.hpp  Dipole.cpp  Dipole.hpp  KineticEnergy.cpp  KineticEnergy.hpp  OSOverlap.cpp  OSOverlap.hpp  OneElectronPotential.cpp  OneElectronPotential.hpp  OneElectronPotential_LUT.cpp  OneElectronPotential_LUT.hpp  OneElectronProperty.cpp  OneElectronProperty.hpp  Overlap.cpp  Overlap.hpp  creator.cpp  generate-potential-recur.py  modinfo.py
Integrals/SystemIntegrals/: CMakeLists.txt  NuclearDipole.cpp  NuclearRepulsion.cpp
Integrals/TwoElectronIntegrals/: CMakeLists.txt  ReferenceERI.cpp  ReferenceERI.hpp  ValeevRef.cpp  creator.cpp  modinfo.py
Integrals/boys/: Boys.hpp  Boys_shortgrid.hpp  gen_longfac.py
Methods/: CMakeLists.txt  MIM.cpp  MIM.hpp  __init__.py  creator.cpp  creator.py  export.cpp  modinfo.py
Methods/BSSE/: BSSEKernel.cpp  BSSEKernel.hpp  CMakeLists.txt  CP.cpp  CP.hpp  VMFC.cpp  VMFC.hpp
Methods/CBS/: CMakeLists.txt  Feller.py  Helgaker.py
Methods/CC/: CCSDT.py  CMakeLists.txt
Methods/CompositeMethods/: CMakeLists.txt  CP.py  FPA.py  FellerCBS.py  HelgakerCBS.py  MIM.cpp  MIM.hpp  MyCrazyCompositeMethod.py
Methods/MBE/: CMakeLists.txt  MBE.cpp  MBE.hpp  MBECommon.hpp  MBEHelper.py  MBEUtils.cpp  MBEUtils.hpp  creator.cpp  modinfo.py
Methods/MIM/: CMakeLists.txt  FPA.py  MIM.cpp  MIM.hpp
Methods/MP2/: CMakeLists.txt  MP2.py
Methods/MethodHelpers/: CMakeLists.txt  MethodHelpers.cpp  MethodHelpers.hpp
Methods/SCF/: BPTest.cpp  BPTest.hpp  BasicFockBuild.cpp  BasicFockBuild.hpp  BasicFockBuild.new.cpp  CMakeLists.txt  CoreGuess.cpp  CoreGuess.hpp  DIIS.cpp  DIIS.hpp  Damping.cpp  Damping.hpp  HFIterate.cpp  HFIterate.hpp  HFIterate.hpp.bak  SCF.py  SCFCommon.cpp  SCFCommon.hpp  SCF_Common.cpp  SCF_Common.hpp  creator.py
Methods/SCF/old/: SCF_Common.cpp  SCF_Common.hpp
Methods/VMFC/: CMakeLists.txt  VMFC.cpp  VMFC.hpp
OneElectronIntegrals/: CMakeLists.txt  Overlap.cpp  Overlap.hpp
SystemFragmenters/: Atomizer.cpp  Atomizer.hpp  Bondizer.cpp  Bondizer.hpp  CMakeLists.txt  CrystalFragger.cpp  CrystalFragger.hpp  Ghoster.cpp  Ghoster.hpp  Null.cpp  Null.hpp  UserDefined.cpp  UserDefined.hpp  creator.cpp  modinfo.py
SystemIntegrals/: CMakeLists.txt  NuclearDipole.cpp  NuclearDipole.hpp  NuclearRepulsion.cpp  NuclearRepulsion.hpp  creator.cpp  modinfo.py
TestModules/: CMakeLists.txt  TestExtLib.cpp  TestExtLib.hpp  TestModule1.cpp  TestModule1.hpp  TestOptions.py  TestPyModule1.py  __init__.py  creator.cpp  creator.py  dynlib.cpp  dynlib.hpp  modinfo.py  staticlib.cpp  staticlib.hpp
dox/: atomizer.md  bondizer.md  cpghoster.md  developers.doxcfg  mainpage.dox  mbe.md  mbehelper.md  nmerizer.md  pesscan.md  vmfcghoster.md
pulsar_modules/: CMakeLists.txt  __init__.py  creator.cpp  creator.py  modinfo.py
pulsar_modules/analysis/: MBEHelper.py  PESScan.py
pulsar_modules/common/: BasisSetCommon.cpp  BasisSetCommon.hpp  CMakeLists.txt  ProgressBar.cpp  ProgressBar.hpp
pulsar_modules/integrals/: CMakeLists.txt  NuclearDipole.cpp  NuclearRepulsion.cpp  OSDipole.cpp  OSDipole.hpp  OSKineticEnergy.cpp  OSOneElectronPotential.cpp  OSOneElectronPotential_LUT.hpp  OSOverlap.cpp  OSOverlap.hpp  OSOverlapTerms.cpp  OneElectronIntegralSum.cpp  OneElectronProperty.cpp  OneElectronProperty.hpp  OneElectron_Eigen.cpp  ReferenceERI.cpp  ReferenceERI.hpp  ValeevRef.cpp  creator.cpp
pulsar_modules/integrals/boys/: Boys_longfac.cpp  Boys_longfac.hpp  Boys_shortgrid.cpp  gen_shortgrid.py
pulsar_modules/methods/: CMakeLists.txt  export.cpp
pulsar_modules/methods/composite_methods/: CP.py  FPA.py  FellerCBS.py  HelgakerCBS.py  MyCrazyCompositeMethod.py  QMMM.py
pulsar_modules/methods/mbe/: CMakeLists.txt  MBE.cpp  MBE.hpp  MBEHelper.py
pulsar_modules/methods/method_helpers/: CMakeLists.txt  MethodHelpers.cpp  MethodHelpers.hpp
pulsar_modules/methods/optimizer/: GeometryOptimizer.py
pulsar_modules/methods/scf/: BasicFockBuild.cpp  BasicFockBuild.hpp  CMakeLists.txt  CoreGuess.cpp  CoreGuess.hpp  DIIS.cpp  DIIS.hpp  Damping.cpp  Damping.hpp  HFIterate.cpp  HFIterate.hpp  SCFCommon.cpp  SCFCommon.hpp
pulsar_modules/system_fragmenters/: Atomizer.cpp  Atomizer.hpp  Bondizer.cpp  Bondizer.hpp  CMakeLists.txt  CPGhoster.cpp  CPGhoster.hpp  CrystalFragger.cpp  CrystalFragger.hpp  NMerizer.cpp  NMerizer.hpp  UserDefined.cpp  UserDefined.hpp  VMFCGhoster.cpp  VMFCGhoster.hpp
test/: CMakeLists.txt
test/analysis/: CMakeLists.txt  TestMBEHelper.py  TestPESScan.py
test/methods/: CMakeLists.txt  TestMBE.py
test/system_fragmenters/: CMakeLists.txt  TestAtomizer.py  TestBondizer.py  TestCPGhoster.py  TestNMerizer.py  TestVMFCGhoster.py
test/testmodules/: CMakeLists.txt  FakeSCF.py  __init__.py  creator.py  modinfo.py
